<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeFragment">


    <TextView
        android:id="@+id/welcomeTitle"
        style="@style/screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/aleo_light"
        android:text="@string/welcome_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_instructions"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_instructions" />

</LinearLayout>
</layout>