<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ShoeListFragment">

                <TextView
                    android:id="@+id/titleListOfShoes"
                    style="@style/screen_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/title_shoe_list" />

                <TextView
                    android:id="@+id/list_of_shoes"
                    android:layout_width="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_height="wrap_content"
                    android:text="@string/list_of_shoes" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_shoe_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="50dp"
                    android:clickable="true"
                    android:contentDescription="@string/shoe_list_content_desc"
                    android:focusable="true"
                    app:srcCompat="@drawable/ic_add"
                    tools:ignore="RedundantDescriptionCheck" />
            </LinearLayout>
        </ScrollView>
</layout>